# model/request/user.go
@@ -10,3 +10,11 @@ type UserRegister struct {
 	Phone     string `json:"phone" example:"电话号码"`
 	Email     string `json:"email" example:"电子邮箱"`
 }
+
+// UserLogin User login structure
+type UserLogin struct {
+	Username  string `json:"username"`  // 用户名
+	Password  string `json:"password"`  // 密码
+	Captcha   string `json:"captcha"`   // 验证码
+	CaptchaId string `json:"captchaId"` // 验证码ID
+}
