# router/user.go
@@ -12,6 +12,8 @@ func (s *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	userApi := v1.ApiGroupApp.UserApi
 	{
 		userRouter.POST("register", userApi.Register) // 管理员注册账号
+		userRouter.POST("login", userApi.Login)       // 管理员注册账号
+		userRouter.POST("captcha", userApi.Captcha)   // 管理员注册账号
 	}
 
 }
